spade-tests/src/snapshots/spade_tests__typeinference__array_index_errors_look_good.snap
---
source: spade-tests/src/typeinference.rs
---
entity counter(x: [int<8>; 10], idx: uint<7>) -> int<8> {
    x[idx]
}


error: Expected type uint<7>, got uint<4>
  ┌─ testinput:2:7
  │
2 │     x[idx]
  │       ^^^ Expected uint<7>, got uint<4>
  │
  = note: because the value is used as an index to an array


